very basic display testing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,8 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "semaphore": "cpp"
+        "semaphore": "cpp",
+        "xstring": "cpp",
+        "xutility": "cpp"
     }
 }
